fix sprint stat graph on mobile from being full width on a single line

--- a/resources/assets/sass/components/_player-stats.scss
+++ b/resources/assets/sass/components/_player-stats.scss
@@ -11,6 +11,7 @@
   position: relative;
   text-align: center;
   margin-bottom: $gap;
+  max-width: 50%;
 
   // sizing/layout
   .stat-chart-wrapper {
